--- a/singgasanaseni/templates/istana/istanatampaksiring.html
+++ b/singgasanaseni/templates/istana/istanatampaksiring.html
@@ -7,7 +7,32 @@
 
     <!-- Header -->
     <header class="artikel">
-              <img src="{% static 'img/slider1.png' %}">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/1.jpg' %}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/2.jpg' %}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/3.jpg' %}" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
     </header>
 
     <article>
@@ -24,12 +49,15 @@
             </div>
              <div class="col-md-7">
                 <p>
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
+                    Bila dibandingkan dengan istana-istana kepresidenan yang berada di tengah kota besar yang sibuk atau di pinggir jalan raya yang ramai di Pulau Jawa, Istana Tampaksiring tampak istimewa. Ia bukan hanya terpencil sendiri di Pulau Bali, tapi juga seakan- akan mengawasi seluruh kedamaian lanskap pulau itu. <br>
+                    Memandang ke arah selatan dari salah satu sudut Istana, akan tampaklah jalan yang raya yang menghubungkan pantai barat dengan Singaraja di pantai timur. Ke arah utara pada pagi hari cerah, terlihat Gunung Batur; dan sedikit ke arah timur, Gunung Agung menjulang.<br>
+                    Istana Tampaksiring istimewa karena ia adalah satu-satunya Istana yang dibangun pada masa kemerdekaan. Bung Karno menggagas pendirian sebuah kediaman presiden di Tampaksiring karena— dengan semakin eratnya perhubungan dengan dunia—Indonesia mulai menerima banyak tamu negara yang banyak pula di antaranya yang menyatakan minat untuk mengunjungi Bali. memerlukan helikopter pada saat memilih lokasi tapak di Tampaksiring itu sebagai tempat untuk membangun Istana Kepresidenan. Dalam beberapa kali kunjungannya ke Bali sebelum 1955, ia sudah sering bermalam di rumah tetirah milik Raja Gianyar di Tampaksiring. Pada masa Raja Gianyar V dan VI, pesanggrahan itu banyak dimanfaatkan oleh para tamu asing, khususnya pejabat pemerintah Hindia-Belanda. Para orang tua di desa itu masih ingat bagaimana pesanggrahan itu tiba-tiba bersinar terang dengan cahaya lampu petromaks bila Bung Karno datang ke sana. Pada masa-masa awal kunjungannya ke Tampaksiring, selain ketiadaan listrik, Bung Karno juga masih menyaksikan betapa sulitnya orang memikul air mendaki lereng terjal untuk mencukupi kebutuhan di pesanggrahan.<br>
+                    Dari depan pesanggrahan itu, kolam pemandian Pura Tirta Empul hanya terpisahkan oleh tebing curam setinggi 50 meter. Dinding-dinding bukit seperti itulah yang barangkali merupakan asal nama Tampaksiring—dalam bahasa Bali berarti “telapak yang miring.” Menurut hikayat yang tercatat pada lontar Usana, Tampaksiring bermula dengan kisah Raja Mayadenawa yang sakti. Sifatnya yang angkara murka membuat Batara Indra mengirim balatentara untuk menangkapnya. Mayadenawa pun lari ke hutan dengan memiringkan telapak kakinya agar tidak Pembangunan Istana Tampaksiring juga mempertimbangkan kondisi sosial lingkungan sekitar. Sebelum bangunan Istana didirikan, dibuatlah sebuah pusat kesehatan masyarakat dan pos polisi di Desa Manukaya. Unit pembangkit listrik yang dibangun khusus untuk Istana pun ikut dinikmati oleh masyarakat sekitar. Kecintaan Bung Karno kepada pesanggrahan Tampaksiring membuat Raja Gianyar kemudian menyerahkan lahan pesanggrahan itu kepada negara. Pada 1955, Presiden Sukarno memerintahkan arsitek R.M. Soedarsono membuat rancang-bangun untuk Istana Kepresidenan di sana.<br>
+                    Pembangunan Istana Tampaksiring dipersiapkan pada 1956 oleh Jawatan Pekerjaan Umum. Soedarsono sendiri adalah seorang arsitek di jawatan itu. Bangunan Wisma Merdeka mulai didirikan pada 1957—di atas lahan pesanggrahan Raja Gianyar yang dirobohkan—di bawah pengawasan Kepala Dinas Pekerjaan Umum Seksi Gianyar, Tjokorda Gde Raka. Berbeda dengan bangunan-bangunan Istana Kepresidenan yang dibangun pada masa penjajahan Belanda, Istana Tampaksiring menonjolkan ciri keindonesiaan yang hangat.<br>
+                    Tidak ada pilar-pilar besar yang menampilkan kesan keagungan dan kekuasaan duniawi. Rancang-bangunnya sangat fungsional, menonjolkan kesederhanaan dan fungsinya sebagai wisma peristirahatan. Batu-batu alam dan batubata halus khas Bali sengaja ditonjolkan untuk menciptakan corak kedaerahan. Ukiran batu paras dan tiang-tiang kayu gaya Bali terasa padu dalam konsep arsitekturnya, bukan sebagai elemen tambahan yang ditempelkan.<br>
+                    Konstruksi beton digunakan untuk menerjemahkan rancang-bangun yang menuntut bentangan-bentangan lebar. Semua bahan kayu jati serta bahan-bahan bangunan lainnya— kecuali pasir dan batubata—didatangkan dari Jawa. Adapun elemen artistiknya—ukiran kayu dan batu—dikerjakan oleh para seniman Bali.
+                    Bung Karno sendiri memberi banyak masukan pada rancang-bangun Istana Tampaksiring yang cirinya kemudian menjadi unsur pengikat bagi bangunan-bangunan kepresidenan yang dibangun pada masanya. Istana Tampaksiring adalah rumah tetirah kepresidenan yang juga dipakai untuk pertemuan-pertemuan informal bernuansa politik, ataupun yang kemudian menghasilkan keputusan-keputusan politik. Di Istana ini, Presiden Ne Win dari Burma melakukan perundingan dengan Presiden Soeharto pada 1982. Pertemuan informal antara Menteri Luar Negeri Ali Alatas dan Presiden Taiwan Lee Teng-hui pernah pula terjadi di sini untuk membicarakan berbagai isu strategis hubungan Indonesia-Taiwan.<br>
+                    Pada masa Presiden Megawati didirikan gedung konferensi yang diberi nama Graha Bung Karno. Mengejar penyelenggaraan KTT ASEAN pada tahun 2003, pembangunannya dikerjakan siang-malam oleh 500 tenaga kerja selama kurang lebih enam bulan. Desainnya dibuat oleh Kris Danubrata, dengan relief wajah Bung Karno dari samping pada dinding utama.
                 </p>
             </div>
 
