--- a/singgasanaseni/templates/istana/istanabogor.html
+++ b/singgasanaseni/templates/istana/istanabogor.html
@@ -7,7 +7,32 @@
 
     <!-- Header -->
     <header class="artikel">
-              <img src="{% static 'img/slider1.png' %}">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/1.jpg' %}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/2.jpg' %}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/3.jpg' %}" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
     </header>
 
     <article>
@@ -18,18 +43,30 @@
                 <h3>Istana Bogor</h3>
                 <label>Lorem ipsum lorem ipsum Lorem ipsum lorem ipsum</label><br>
                 <font>konstruksi awal</font><br>
-                <label>1744</label><br>
+                <label>1842</label><br>
                 <font>gaya arsitektur</font><br>
                 <label>loremupsim <br>loremspid loremipsum loremspid</label>
             </div>
              <div class="col-md-7">
                 <p>
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                     Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
-                    Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.
+                    Vue du Palais de Buitenzorg (1842)<br>
+                    Ketika Istana Buitenzorg pertama kali didirikan pada pertengahan abad ke-18, wilayah yang kelak bernama Bogor masih berupa sebuah kampung. Bantaran Sungai Cisadane dan Sungai Ciliwung yang sejuk dan tenang itu semula hanya dihuni beberapa warga yang menggarap lahan subur di sekitarnya. Pada masa itu, daerah yang dikelilingi oleh Gunung-gunung Salak, Pangrango, Pancar, dan Kapur ini telah menjadi bagian (ommelanden) dari “district Jacatra,” tidak lagi tersisa kejayaan masa lalunya sebagai pusat Kerajaan Sunda.<br>
+                    Ketika Gubernur Jenderal Hindia-Belanda Gustaaf Willem baron Van Imhoff menemukan tempat itu dalam suatu perjalanan inspeksi ke daerah Cianjur, ia mencatatnya sebagai Kampung Baru yang terletak 39 paal dari Batavia, 290 meter di atas permukaan laut. <br>
+                    Sang Gubernur Jenderal langsung jatuh cinta pada tempat yang sejuk dan jauh dari ingar-bingar itu. Batavia, yang telah menjadi pusat pemerintahan dan perdagangan, adalah kota yang terlalu panas bagi orang Belanda yang biasa tinggal di negeri dingin. Ia kemudian berhasrat membangun sebuah rumah peristirahatan di tempat yang sejuk dan subur itu. Ia pula yang memutuskan untuk meniru gaya bangunan Istana Blienheim, puri kediaman Duke of Marlborough yang terletak di dekat Oxford, Inggris. Ia membuat sketsa bangunannya sendiri, dan pada tahun 1745 mulai memimpin pembangunan puri di Kampung Baru itu. Ketenangan tempat itu membuat Van Imhoff memberi nama baru bagi daerah itu: Buitenzorg, sebuah kata Belanda yang berarti nirpeduli—without worry atau carefree dalam bahasa Inggris, sans souci dalam bahasa Prancis. Buitenzorg adalah nama yang tepat bagi tempat tetirah untuk melupakan pelik-pelik di Batavia.<br>
+                    Namun sejumlah sejarawan meragukan bahwa Van Imhoff mengambil inspirasi dari Istana Blenheim. Sebab ia adalah seorang bangsawan Jerman dari daerah Heidelberg. Di samping itu, penamaan Buitenzorg yang searti dengan sans souci menimbulkan kemungkinan bahwa desain pertama Puri Buitenzorg itu sebetulnya malah meniru atau diilhami oleh Istana Raja Frederik di dekat Berlin yang bernama Sans Souci.<br>
+                    Ketika Van Imhoff meninggal pada 1750, pembangunan Puri Buitenzorg masih jauh dari usai. Bersamaan dengan waktu itu mulai pula berkobar Perang Banten. Rakyat yang bermukim di bantaran Sungai Cisadane kecewa karena Ratu Syarifah yang menjadi penguasa Kesultanan Banten telah menyerahkan kawasan subur itu kepada VOC. Terjadilah pemberontakan rakyat yang dipimpin Kiai Tapa dan Ratu Bagus Buang. Puri yang belum selesai dibangun di Buitenzorg itu dibakar dalam salah satu serangan. Pada 1802, di salah satu sudut halaman puri yang seluas 28 hektar itu didirikan sebuah gereja Protestan. Hingga sekarang gereja itu masih berfungsi, tetapi dipisahkan dari lahan Istana Bogor dengan pagar, agar bisa dimanfaatkan oleh masyarakat umum secara penuh. Bangunan asli gereja itu juga sudah diganti dengan yang baru pada awal abad ke-20. Gereja itu sekarang dikenal dengan nama Zebaoth.<br>
+                    Bersamaan dengan bangunan gereja, dibangun pula dapur pembuatan roti dan kue, sebuah ruang untuk bermain, dan tempat minum kopi di halaman. Sebuah rumah sakit juga didirikan di belakang kompleks Puri Buitenzorg. Rumah sakit itu sekarang menjadi Rumah Sakit Umum Palang Merah Indonesia, terletak di Jalan Pajajaran. Pada masa lalu, lahan rumah sakit ini masih menjadi bagian dari halaman luas Puri Buitenzorg. Dilihat dari udara, sekitar tahun 1925. Kelurusan jalan di depan puri dan kolam itu adalah garis yang menghubungkan Buitenzorg dengan Batavia.<br>
+                    Rumput di halaman Istana Bogor yang luas dibiarkan liar-meninggi. Rusa-rusa yang jumlahnya sudah mencapai ratusan, mulai punah karena setiap hari disembelih dan dimakan oleh para serdadu Jepang. Untungnya, rumput yang sudah tumbuh tinggi justru merupakan tempat persembunyian yang baik bagi beberapa ekor rusa. Karena terlindung di balik rumput itulah populasi rusa Istana Bogor tidak sepenuhnya binasa selama pendudukan Jepang antara 1942–1945. Baru pada akhir 1949, ketika Belanda mengakui kedaulatan Republik Indonesia, Istana Bogor diserahkan secara resmi oleh Kerajaan Belanda kepada Pemerintah Republik Indonesia. Hanya lima buah cermin besar yang masih tergantung di dinding menjadi barang inventaris Istana Bogor yang diserahkan kepada bangsa Indonesia ketika itu.<br>
+                    Namun demikian, Istana Bogor tidak segera memperoleh perhatian Pemerintah Republik Indonesia. Usia muda kemerdekaan yang baru diproklamasikan itu membuat para pemimpin negara lebih terpusat perhatiannya pada urusan penyelenggaraan negara. Pemugaran Istana Bogor dipercepat menjelang sebuah pertemuan politik pemimpin lima negara sebagai tindak-lanjut dari pertemuan serupa di Colombo pada 1954 yang belum mencapai kata sepakat. Perdana Menteri Ali Sastroamidjojo mengundang para Perdana Menteri India, Burma, Sri Lanka, dan Pakistan untuk melanjutkan pembicaraan di Indonesia.<br>
+                    Pada 1954 itu pula, di halaman Istana Bogor yang luas juga dibangun dan dipugar lima buah paviliun—Amarta, Madukara, Pringgodani, Dwarawati, dan Jodipati yang lebih dikenal dengan Paviliun 1, 2, 3, 4 dan 5—yang terpisah agak jauh dari bangunan-bangunan utama Istana. Salah satunya, sebuah paviliun kecil yang kini dikenal sebagai Paviliun Amarta (atau Paviliun 2), adalah tempat kesukaan Bung Karno. Ia sering menginap di Paviliun Amarta ini bila berada di Istana Bogor. Berdasarkan luas bangunan dan tanahnya, Istana Bogor merupakan istana terbesar dan terluas dari lima Istana Kepresidenan yang lain.
+                    Sementara itu, rusa-rusa yang menghuni halaman Istana Bogor terus beranak-pinak hingga mencapai 700-an ekor, padahal daya dukung halaman Istana Bogor sebetulnya hanya ideal untuk 300 ekor rusa. Untuk mengurangi jumlahnya, beberapa ekor rusa telah dipindahkan ke Istana Tampaksiring di Bali, kompleks Badan Intelijen Negara di Jakarta, dan beberapa kantor Gubernur di tanah air. Semua langkah tertata untuk konservasi rusa ini dilaksanakan pada masa Presiden Megawati. Menjelang 1960, Istana Bogor menjalankan fungsi yang sama dengan Istana Merdeka dan Istana Negara di Jakarta: sebagai tempat kediaman sekaligus tempat kerja Presiden Republik Indonesia. Di Istana Bogor pula Bung Karno mencanangkan pembentukan Komando Mandala Pembebasan Irian pada 31 Desember 1961.<br>
+                    Istana Buitenzorg pertama kali didirikan pada pertengahan abad ke-18, wilayah yang kelak bernama Bogor masih berupa sebuah kampung. Bantaran Sungai Cisadane dan Sungai Ciliwung yang sejuk dan tenang itu semula hanya dihuni beberapa warga yang menggarap lahan subur di sekitarnya. Istana Bogor dibangun oleh Gubernur Jenderal Hindia-Belanda, Gustaaf Willem baron Van Imhoff sebagai rumah peristirahatan untuk melupakan pelik-pelik di Batavia.<br>
+                    Pada akhir 1949, Istana Bogor diserahkan secara resmi oleh Kerajaan Belanda kepada Pemerintah Republik Indonesia. Hanya lima buah cermin besar yang masih tergantung di dinding menjadi barang inventaris Istana Bogor yang diserahkan kepada bangsa Indonesia ketika itu.<br>
+                    Pemugaran Istana Bogor dipercepat menjelang sebuah pertemuan politik pemimpin lima negara sebagai tindak-lanjut dari pertemuan serupa di Colombo pada 1954 yang belum mencapai kata sepakat. Perdana Menteri Ali Sastroamidjojo mengundang para Perdana Menteri India, Burma, Sri Lanka, dan Pakistan untuk melanjutkan pembicaraan di Indonesia.<br>
+                    Menjelang 1960, Istana Bogor menjalankan fungsi yang sama dengan Istana Merdeka dan Istana Negara di Jakarta: sebagai tempat kediaman sekaligus tempat kerja Presiden Republik Indonesia. Di Istana Bogor pula Bung Karno mencanangkan pembentukan Komando Mandala Pembebasan Irian pada 31 Desember 1961.
+
+
+
                 </p>
             </div>
 
