--- a/singgasanaseni/templates/search/search.html
+++ b/singgasanaseni/templates/search/search.html
@@ -1,39 +1,40 @@
 {% extends 'base.html' %}
-
 {% block content %}
-    <h2>Search</h2>
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
 
-        {% if query %}
-            <h3>Results</h3>
+    <h1>Search Page</h1>
 
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
+        <br/>
+        <form action="{% url 'searchposts' %}" method="GET" value="{{request.GET.q}}">
+            Search <input type="text" name="q" value="{{request.GET.q}}" placeholder="Search posts"/>
+            <input type="submit" name="submit" value="Search"/>
+        </form>
 
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+
+        {% if submitbutton == 'Search' and request.GET.q != '' %}
+        {% if results %}
+        <h1>Results for <b>{{ request.GET.q }}</b></h1>
+        <br/><br/>
+
+    <div class="container">
+        {% for result in results %}
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="/perupa/{{ result.id }}">
+                        <img class="col-12 col-sm-2 col-md-10 px-0" src="/media/{{ result.Gambar }}" alt="">
+                    </a>
                 </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
+                <div class="col-md-7">
+                    <label><a href="/perupa/{{ result.id }}">{{ result.Panggilan }}</a></label>
+                    <p>{{ result.Tanggal_Lahir |date:"d M Y" }} - {{ result.Tanggal_Wafat |date:"d M Y" }}</p>
+                </div>
+            </div>
+                <hr>
+        {% endfor %}
+    </div>
+
+{% else %}
+No search results for this query
+{% endif %}
+{% endif %}
 {% endblock %}
