--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,8 +25,6 @@
     <!-- Custom CSS -->
     <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/modernizr.custom.js' %}"></script>
-
-  </head>
 
   </head>
 
@@ -137,6 +136,7 @@
     {% endblock %}
 
     <script src="{% static 'js/cbpHorizontalSlideOutMenu.min.js' %}"></script>
+    <script src="{% static 'vendor/jquery/jquery.js' %}"></script>
     <script>
       var menu = new cbpHorizontalSlideOutMenu( document.getElementById( 'cbp-hsmenu-wrapper' ) );
     </script>
@@ -150,7 +150,8 @@
           x.className = "cbp-hsmenu";
       }
       }
-      </script>
+    </script>
+
 
 
   </body>
