--- a/singgasanaseni/templates/perupa/index.html
+++ b/singgasanaseni/templates/perupa/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+
 {% load static %}
 
 {% block content %}
@@ -62,34 +64,71 @@
                 <h3>page {{ perupa.number }}/{{ perupa.paginator.num_pages }}</h3>
                 <span class="pagingkarya">
                     <ul class="pagination">
+
+                        <li class="page-item">    <!-- Jump to First Page -->
+                           {% if perupa.number != 1 %}
+                               <li class="previous">
+                                  <a href="?page=1">
+                                    <span aria-hidden="true">&laquo;</span>
+                                  </a>
+                           {% else %}
+                               <li class="previous disabled">
+                               <a><span aria-hidden="true">&laquo;</span></a>
+                           {% endif %}
+                       </li>
+
+                       <li class="page-item">  <!-- Jump to Prvious Page -->
+                           {% if perupa.has_previous %}
+                               <li class="previous"> <a href="?page={{ perupa.previous_page_number }}">
+                                   <span aria-hidden="true">‹</span></a>
+                           {% else %}
+                               <li class="previous disabled"><a>‹</a>
+                           {% endif %}
+                       </li>
+
                         {% if perupa.has_previous %}
-                            <a href="?page={{ perupa.previous_page_number }}"><</a>
+                       <li class="page-item">  <!-- Show Previous 4 page numbers -->
+                            <li class="previous"> <a class = "skip_prev" href = "">...</a></li>
+                        {% else %}
+                            <li class="next disabled"><a>...</a>
                         {% endif %}
+                       </li>
 
-                        <!--{% for i in perupa.paginator.page_range %}
-                            {% if perupa.number == i %}
-                                <li class="active"><span>{{ i }}<span class="sr-only">(current)</span></span></li>
-                            {% else %}
-                                <li><a href="?page={{ i }}">{{ i }}</a></li>
-                            {% endif %}
-                        {% endfor %}></-->
-
-                        {% for l in  perupa.paginator.page_range %}
-                            {% if l <= perupa.number|add:5 and l >= perupa.number|add:-5 %}
-                                <li><a href="?page={{forloop.counter}}">{{forloop.counter}}</a></li>
-                            {% endif %}
+                        {% for i in "12345" %}
+                        <!-- Change the range ("12345") according to your choice to show numbers -->
+                       <li class="pg" data = {{i}}><a class = "page_number" href=""></a>
                         {% endfor %}
 
-                        {% if perupa.has_next %}
-                            <a href="?page={{ perupa.next_page_number }}"> > </a>
+                        {% if object_list.has_next %}
+                       <li class="page-item">  <!-- Show next 4 page numbers -->
+                            <li class="previous"> <a class = "skip_next" href = "">...</a></li>
+                        {% else %}
+                            <li class="next disabled"><a>...</a>
                         {% endif %}
-                     </ul>
+                       </li>
+
+                       <li class="page-item">  <!-- Jump to Next Page -->
+                        {% if perupa.has_next %}
+                            <li class="previous"> <a href="?page={{ perupa.next_page_number }}">›</a></li>
+                        {% else %}
+                            <li class="next disabled"><a>›</a>
+                        {% endif %}
+                       </li>
+
+                       <li class="page-item">  <!-- Jump to Last Page -->
+                         {% if perupa.number != perupa.paginator.num_pages %}
+                            <li class="previous"> <a href="?page={{ perupa.paginator.num_pages }}">»</a></li>
+                         {% else %}
+                            <li class="next disabled"><a>»</a>
+                         {% endif %}
+                       </li>
+                    </ul>
                 </span>
               </span>
             </div>
 
               <div class="container">
-            {% for Perupa in perupa %}
+            {% for Perupa in perupa.object_list %}
             <div class="row">
                 <div class="col-md-2">
                     <a href="/perupa/{{ Perupa.id }}">
@@ -192,29 +231,61 @@
                 }
               });
 
-              // use value of search field to filter
-              var $quicksearch = $('.quicksearch').keyup( debounce( function() {
-                qsRegex = new RegExp( $quicksearch.val(), 'gi' );
-                $grid.isotope();
-              }, 200 ) );
-
-              function debounce( fn, threshold ) {
-                  var timeout;
-                  threshold = threshold || 100;
-                  return function debounced() {
-                    clearTimeout( timeout );
-                    var args = arguments;
-                    var _this = this;
-                    function delayed() {
-                      fn.apply( _this, args );
-                    }
-                    timeout = setTimeout( delayed, threshold );
-                  };
-                }
 
 
           });
     </script>
 
+    <script>
+        $(document).ready(function(){
+
+          var skip_pages = 5; //change your number accordingly you want to show numbers
+
+          var total_pages = {{perupa.paginator.num_pages}};
+          var current_page = {{perupa.number}};
+          var factor = Math.floor(current_page/skip_pages);
+
+          $(".page_number").each(function(i, obj) {   //Showing the discrete numbers
+                var page = factor*(skip_pages) + i + 1;
+                if(current_page%skip_pages == 0)
+                  page = (factor-1)*skip_pages + i + 1;
+                if(page - 1 < total_pages){
+                  $(this).html(page);
+                  $(this).attr("href", "?page=" + page);
+                }
+                else{
+                  var x = i+1;
+                  $('li[data=' + x + ']').css("display", "none");
+                }
+          });
+            var page = current_page%skip_pages;
+            if(page == 0)
+              page = skip_pages;
+            $('li[data=' + page + ']').each(function(){   //Deciding the active class
+              $('li[data=' + page + ']').addClass("active");
+            });
+
+          $(".skip_next").click(function(){   //Skip next ... Function
+              if(current_page%skip_pages == 0)
+                factor = factor-1;
+              var page = (factor+1)*skip_pages + 1;
+              if(page < total_pages)
+                $(this).attr("href", "?page=" + page);
+              else
+                $(this).attr("href", "?page=" + total_pages);
+          })
+          $(".skip_prev").click(function(){ //Skip Previous ... Function
+              if(current_page%skip_pages == 0)
+                factor = factor-1;
+              var page = skip_pages*(factor-1) + 1;
+              if(page > 0)
+                $(this).attr("href", "?page=" + page);
+              else
+                $(this).attr("href", "?page=" + "1");
+          })
+        })
+
+    </script>
 
 {% endblock %}
+
