--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -16,6 +16,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="{%  static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
     <!-- Custom Fonts -->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
