--- a/singgasanaseni/templates/istana/istanamerdeka.html
+++ b/singgasanaseni/templates/istana/istanamerdeka.html
@@ -6,7 +6,7 @@
 
 
     <!-- Header -->
-    <<header class="artikel">
+    <header class="artikel">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -15,13 +15,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/1.jpg' %}" alt="First slide">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaMerdeka/1.jpg' %}" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/2.jpg' %}" alt="Second slide">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaMerdeka/2.jpg' %}" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="{% static 'img/istana/IstanaBogor/3.jpg' %}" alt="Third slide">
+              <img class="d-block w-100" src="{% static 'img/istana/IstanaMerdeka/3.jpg' %}" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
