--- a/singgasanaseni/templates/perupa/detail.html
+++ b/singgasanaseni/templates/perupa/detail.html
@@ -13,6 +13,7 @@
                 </div>
                 <div class="col-md-5 profildetail">
                     <h2>{{ Perupa.Nama }}</h2>
+                    <p><i>{{ Perupa.Panggilan }}</i></p>
                     <label>{{ Perupa.Tanggal_Lahir | date:"d M Y"  }} - {{ Perupa.Tanggal_Wafat |date:"d M Y"  }}</label>
                     <p>{{ total }} Lukisan</p>
 
