--- a/singgasanaseni/templates/base.html
+++ b/singgasanaseni/templates/base.html
@@ -72,7 +72,8 @@
               <li><a href="#">Publikasi</a></li>
               <li><a href="{% url 'berita-list' %}">Berita</a></li>
               <li><a href="{% url 'tentang-kami' %}">Tentang Kami</a></li>
-              <li class="searchslot">
+              <li><a href="{% url 'searching' %}"><i class="fa fa-search"></i></a></li>
+              <!--li class="searchslot">
                    <form class="navbar-form navbar-right">
                   <div class="input-group">
                     <input type="text" class="form-control formsearch" placeholder="Search" name="search">
@@ -95,7 +96,8 @@
                     </form>
                   </div>
                 </div>
-              </li>
+              </li-->
+
             </ul>
             </div>
           </div>
