perbaikan order lukisan

--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -119,12 +119,12 @@
                     <a href="/karya/{{ Karya.id }}">
                       <img src="/media/{{ Karya.Gambar }}" class="">
                         <figcaption>
-                           <h3>{{ Karya.Perupa }}</h3>
+                           <h3>{{ Karya.Judul }}</h3>
                             <p>
-                              <i>{{ Karya.Judul }}</i><Br>
+                              <i>{{ Karya.Perupa }}</i><Br>
                               {{ Karya.Material }}<br>
                               {{ Karya.Dimensi }}<br>
-                            </p>
+                              {{ Karya.Kategori }}
                         </figcaption>
                     </a>
                   </div>
