--- a/singgasanaseni/templates/karya/index.html
+++ b/singgasanaseni/templates/karya/index.html
@@ -123,8 +123,7 @@
                             <p>
                               <i>{{ Karya.Perupa }}</i><Br>
                               {{ Karya.Material }}<br>
-                              {{ Karya.Dimensi }}<br>
-                              {{ Karya.Kategori }}
+                              {{ Karya.Dimensi }}
                         </figcaption>
                     </a>
                   </div>
